--- a/src/main/resources/templates/community/editPost.html
+++ b/src/main/resources/templates/community/editPost.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${dto.title}">후기 수정</title>
+    <title th:text="${post.title}">후기 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/editPost.css}" href="../../css/community/editPost.css">
@@ -14,7 +14,7 @@
 
 <div layout:fragment="content">
     <div class="container">
-        <form action="post.html" th:action method="post">
+        <form action="post.html" th:action th:object="${post}" method="post">
             <input type="hidden" name="page" th:value="${postPageRequestDTO.page}" value="1">
 
             <h4 class="head">후기 수정</h4>
@@ -24,12 +24,12 @@
             </div>
             <hr>
             <div class="mb-3">
-                <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${dto.hptName}]|"
+                <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${post.hptName}]|"
                        value="[병원명]" readonly>
-                <input type="text" class="form-control" name="title" th:value="${dto.title}" value="제목">
+                <input type="text" class="form-control" th:field="*{title}" value="제목">
             </div>
             <div class="mb-3">
-                <textarea class="form-control" name="content" rows="15" th:text="${dto.content}">내용</textarea>
+                <textarea class="form-control" th:field="*{content}" rows="15">내용</textarea>
             </div>
         </form>
     </div>
@@ -54,7 +54,7 @@
                 return;
             }
 
-            var postNo = [[${dto.postNo}]];
+            var postNo = [[${post.postNo}]];
 
             actionForm.empty();
 
