--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${dto.title}">후기 상세</title>
+    <title th:text="${post.title}">후기 상세</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/post.css}" href="../../css/community/post.css">
@@ -15,34 +15,33 @@
 
 <div layout:fragment="content">
     <div class="container">
-        <h2 th:text="${message}"></h2>
 
         <div class="post">
-            <h2 class="post-title" th:text="|[${dto.hptName}] ${dto.title}|">[병원명] 제목</h2>
-            <p class="post-author" th:text="${dto.userEmail}">작성자 이메일 &nbsp;&nbsp;&nbsp;&nbsp;</p>
-            <span class="post-hits" th:text="|조회수 ${dto.hit}|">조회수 238</span>
+            <h2 class="post-title" th:text="|[${post.hptName}] ${post.title}|">[병원명] 제목</h2>
+            <p class="post-author" th:text="${post.userEmail}">작성자 이메일 &nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <span class="post-hits" th:text="|조회수 ${post.hit}|">조회수 238</span>
             <span class="post-registerDate"
-                  th:text="${#temporals.format(dto.regDate, 'yyyy/MM/dd HH:mm')}">23.4.4 화</span>
+                  th:text="${#temporals.format(post.regDate, 'yyyy/MM/dd HH:mm')}">23.4.4 화</span>
             <hr>
             <div class="post-content">
-                <p th:text="${dto.content}">내용</p>
+                <p th:text="${post.content}">내용</p>
             </div>
             <hr>
 
-            <!--<form th:action="@{/community/{postNo}/report(postNo=${dto.postNo})}" method="post">
+            <!--<form th:action="@{/community/{postNo}/report(postNo=${post.postNo})}" method="post">
                 <input type="hidden" name="page" th:value="${postPageRequestDTO.page}">
                 <input type="hidden" name="type" th:value="${postPageRequestDTO.type}">
                 <input type="hidden" name="keyword" th:value="${postPageRequestDTO.keyword}">-->
 
                 <div class="lbuttons">
-                    <button type="submit" class="btn btn-secondary btn-sm reportBtn" th:text="|신고 (${dto.report})|">신고</button>
+                    <button type="submit" class="btn btn-secondary btn-sm reportBtn" th:text="|신고 (${post.report})|">신고</button>
                 </div>
             <!--</form>-->
-            <form th:action="@{/community/{postNo}/delete(postNo=${dto.postNo})}" method="post">
+            <form th:action="@{/community/{postNo}/delete(postNo=${post.postNo})}" method="post">
                 <div class="rbuttons">
                     <button type="button" class="btn btn-secondary btn-sm"
                             onclick="location.href='editPost.html'"
-                            th:onclick="|location.href='@{/community/{postNo}/edit(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">
+                            th:onclick="|location.href='@{/community/{postNo}/edit(postNo=${post.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">
                         수정
                     </button>
                     <button type="button" class="btn btn-secondary btn-sm deleteBtn">삭제</button>
@@ -60,7 +59,7 @@
 
             <!-- 댓글 -->
             <div class="comment">
-                <h4 class="comment-title">댓글<span class="comment-count" th:text="|(${dto.commentCount})|"></span>
+                <h4 class="comment-title">댓글<span class="comment-count" th:text="|(${post.commentCount})|"></span>
                 </h4>
                 <button class="btn btn-secondary btn-sm addComment">댓글 쓰기</button>
                 <hr>
@@ -90,7 +89,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <input type="hidden" id="postNo" name="postNo" th:value="${dto.postNo}">
+                                <input type="hidden" id="postNo" name="postNo" th:value="${post.postNo}">
                                 <button type="button" class="btn btn-secondary btn-danger commentDelete">Remove</button>
                                 <button type="button" class="btn btn-secondary btn-warning commentUpdate">Modify</button>
                                 <button type="button" class="btn btn-secondary btn-primary commentSave">Save</button>
@@ -108,6 +107,21 @@
     </div>
 
     <script th:inline="javascript">
+
+        /*const urlParams = new URLSearchParams(window.location.search);
+
+        if (urlParams.get('add') != null) {
+            urlParams.delete('add');
+            history.pushState(null, null, window.location.pathname + '?' + urlParams);
+        }*/
+
+        /*$(document).ready(function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            urlParams.delete('add');
+
+            history.pushState(null, null, window.location.pathname + '?' + urlParams);
+        });*/
+
         var actionForm = $("form");
 
         $(".deleteBtn").click(function(){
@@ -127,7 +141,7 @@
                 return;
             }
 
-            var postNo = [[${dto.postNo}]];
+            var postNo = [[${post.postNo}]];
 
             actionForm.empty();
 
@@ -141,6 +155,7 @@
 
             actionForm.submit();
         });
+
 
         /*document.addEventListener("DOMContentLoaded", function() {
             if ([[${report}]]) {
