--- a/src/main/resources/templates/maps/maps1.html
+++ b/src/main/resources/templates/maps/maps1.html
@@ -9,12 +9,14 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-	<div id="map" style="width:100%;height:800px;position:relative;overflow:hidden;"></div>
+
+	<form>
+		<label for="query">Search:</label>
+		<input type="text" id="query" name="query">
+		<button type="submit" id="searchBtn">Search</button>
+	</form>
 	
-	<div>
-		<input type="text" id="query" placeholder="검색어를 입력하세요." />
-		<button id="searchBtn">검색</button>
-	</div>
+	<div id="map" style="width:100%;height:800px;position:relative;overflow:hidden;"></div>
 	
 	<div id="placesList"></div>  <!-- 결과를 표시할 div 요소 -->
 	
@@ -38,20 +40,39 @@
 			$("#searchBtn").click(function(){
 				var query = $("#query").val();
 				$.ajax({
+					type: "GET",
 					url: "/api",
-					type: "post",
-					dataType: "json",
-					data: {
-						query
-					},
+					data: {query},
 					success: function(data){
+						// 기존의 마커 삭제
+						deleteMarkers();
+						
+						// 장소 목록 삭제
 						var placesList = $("#placesList");
 						placesList.empty();
+						
 						$.each(data, function(index, item) {
+							// 마커 생성
+							var marker = addMarker(new kakao.maps.LatLng(item.y, item.x), item.place_name);
+							
+							// 마커 클릭 이벤트 등록
+							kakao.maps.event.addListener(marker, 'click', function() {
+								// 인포윈도우 생성
+								var infowindow = new kakao.maps.InfoWindow({
+									content: '<div style="padding:5px;font-size:12px;">' + item.place_name + '</div>'
+								});
+								
+								// 인포윈도우 열기
+								infowindow.open(map, marker);
+							});
+							
+							// 장소 목록에 추가
 							var placeItem = $("<div>").addClass("placeItem");
+							var id = $("<div>").addClass("id").text(item.id);
 							var name = $("<div>").addClass("name").text(item.place_name);
 							var phone = $("<div>").addClass("phone").text(item.phone);
 							var address = $("<div>").addClass("address").text(item.road_address_name);
+							var placeUrl = $("<div>").addClass("placeUrl").text(item.place_url);
 							placeItem.append(name, phone, address);
 							placesList.append(placeItem);
 						});
