--- a/src/main/resources/static/css/community/common.css
+++ b/src/main/resources/static/css/community/common.css
@@ -8,3 +8,17 @@
     background-color: steelblue;
     text-decoration: none;
 }
+
+nav {
+    width: 100%;
+    height: 57px;
+    display: flex;
+    align-items: center;
+}
+
+header {
+    width: 100%;
+    height: 73px;
+    display: flex;
+    align-items: center;
+}
