--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -68,6 +68,9 @@
 
                 </div>
 
+                <div class="commentFooter">
+
+                </div>
                 <hr>
 
                 <div class="modal" tabindex="-1" role="dialog">
