--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,10 +16,10 @@
 				<span class="fs-4">iHealMe</span>
 			</a>
 			<ul class="nav">
-				<li class="nav-item"><a href="/" class="nav-link link-dark px-3 active" aria-current="page">Home</a></li>
-				<li class="nav-item"><a href="/HptReception/HptReceptionList" class="nav-link link-dark px-3">접수 내역</a></li>
-				<li class="nav-item"><a href="/community" class="nav-link link-dark px-3">커뮤니티</a></li>
-				<li class="nav-item"><a href="/userReservation" class="nav-link link-dark px-3">마이페이지</a></li>
+				<li class="nav-item"><a href="/" class="nav-link link-dark px-4 active" aria-current="page">Home</a></li>
+				<li class="nav-item"><a href="/HptReception/HptReceptionList" class="nav-link link-dark 4">접수 내역</a></li>
+				<li class="nav-item"><a href="/community" class="nav-link link-dark px-4">커뮤니티</a></li>
+				<li class="nav-item"><a href="/userReservation" class="nav-link link-dark px-4">마이페이지</a></li>
 			</ul>
 		</div>
 	</header>
