--- a/src/main/resources/templates/community/editPost.html
+++ b/src/main/resources/templates/community/editPost.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${post.title}">후기 수정</title>
+    <title th:text="${postRes.title}">후기 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/editPost.css}" href="../../css/community/editPost.css">
@@ -14,8 +14,9 @@
 
 <div layout:fragment="content">
     <div class="container">
-        <form action="post.html" th:action th:object="${post}" method="post">
-            <input type="hidden" name="page" th:value="${postPageRequestDTO.page}" value="1">
+        <form action="post.html" th:action th:object="${postRes}" method="post">
+            <input type="hidden" name="page" th:value="${postPageReq.page}" value="1">
+            <input type="hidden" th:field="*{postNo}" value="1">
 
             <h4 class="head">후기 수정</h4>
             <div class="buttons">
@@ -24,9 +25,9 @@
             </div>
             <hr>
             <div class="mb-3">
-                <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${post.hptName}]|"
+                <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${postRes.hptName}]|"
                        value="[병원명]" readonly>
-                <input type="text" class="form-control" th:field="*{title}" value="제목">
+                <input type="text" class="form-control" th:field="*{title}" value="제목" required>
             </div>
             <div class="mb-3">
                 <textarea class="form-control" th:field="*{content}" rows="15">내용</textarea>
@@ -54,20 +55,8 @@
                 return;
             }
 
-            var postNo = [[${post.postNo}]];
-
-            actionForm.empty();
-
-            actionForm.append('<input type="hidden" name="page" value=[[${postPageRequestDTO.page}]]>'); //목록 페이지 이동에 필요한 내용을 다시 추가
-            actionForm.append('<input type="hidden" name="type" value=[[${postPageRequestDTO.type}]]>');
-            actionForm.append('<input type="hidden" name="keyword" value=[[${postPageRequestDTO.keyword}]]>');
-
-            actionForm
-                .attr("action", "/community/" + postNo)
-                .attr("method", "get");
-
-            actionForm.submit();
-        })
+            location.href=[[@{/community/{postNo}(postNo=${postRes.postNo},page=${postPageReq.page},type=${postPageReq.type},keyword=${postPageReq.keyword})}]];
+        });
     </script>
 </div>
 </body>
