--- a/src/main/resources/templates/community/posts.html
+++ b/src/main/resources/templates/community/posts.html
@@ -32,7 +32,7 @@
                 <td th:text="${post.hptName}">병원명</td>
                 <td>
                     <a href="post.html"
-                       th:href="@{/community/{postNo}(postNo=${post.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}"
+                       th:href="@{/community/{postNo}(postNo=${post.postNo},page=${postPageReq.page},type=${postPageReq.type},keyword=${postPageReq.keyword})}"
                        th:text="${post.title}">제목</a>
                     <span th:text="|[${post.commentCount}]|" style="color: red">[댓글수]</span>
                 </td>
@@ -48,16 +48,16 @@
             <li class="page-item" th:if="${result.prev}">
                 <a class="page-link"
                    th:href="@{/community(page=${result.start - 1},
-                   type=${postPageRequestDTO.type},
-                   keyword=${postPageRequestDTO.keyword})}" tabindex="-1">이전</a>
+                   type=${postPageReq.type},
+                   keyword=${postPageReq.keyword})}" tabindex="-1">이전</a>
             </li>
 
             <li class="page-item" th:class="${result.currentPage == page} ? 'active' : _"
                 th:each="page : ${result.pageList}">
                 <a class="page-link"
                    th:href="@{/community(page=${page},
-                   type=${postPageRequestDTO.type},
-                   keyword=${postPageRequestDTO.keyword})}">
+                   type=${postPageReq.type},
+                   keyword=${postPageReq.keyword})}">
                     [[${page}]]
                 </a>
             </li>
@@ -65,14 +65,14 @@
             <li class="page-item" th:if="${result.next}">
                 <a class="page-link"
                    th:href="@{/community(page = ${result.end + 1},
-                   type=${postPageRequestDTO.type},
-                   keyword=${postPageRequestDTO.keyword})}">다음</a>
+                   type=${postPageReq.type},
+                   keyword=${postPageReq.keyword})}">다음</a>
             </li>
         </ul>
         <!-- 페이징 -->
 
         <!-- 검색 -->
-        <form th:object="${postPageRequestDTO}">
+        <form th:object="${postPageReq}">
             <input type="hidden" name="page" value="1">
             <select class="form-select" aria-label="Default select example" th:field="*{type}">
                 <option th:each="type : ${searchTypes}"
