add page, search in user/hpt view

--- a/src/main/resources/static/css/HptReception/HptReception.css
+++ b/src/main/resources/static/css/HptReception/HptReception.css
@@ -79,3 +79,26 @@ th {
     background-color: #bfbfbf;
     cursor: not-allowed;
 }
+
+form {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.form-select {
+    width: 15%;
+}
+
+.form-control {
+    width: 70%;
+}
+
+.btn-secondary {
+    background-color: skyblue;
+    color: black;
+    border: none;
+}
+
+.btn-secondary:hover {
+    background-color: steelblue;
+}
