--- a/src/main/resources/static/css/reservationStyle.css
+++ b/src/main/resources/static/css/reservationStyle.css
@@ -54,3 +54,26 @@ th {
 	font-weight: bold;
 	text-align: center;
 }
+
+form {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.form-select {
+	width: 15%;
+}
+
+.form-control {
+	width: 70%;
+}
+
+.btn-secondary {
+	background-color: skyblue;
+	color: black;
+	border: none;
+}
+
+.btn-secondary:hover {
+	background-color: steelblue;
+}
