--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -24,7 +24,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="reservationInfo : ${session.userReservationList}">
+                <tr th:each="reservationInfo : ${result.userResList}">
                     <td th:text="${reservationInfo.resNo}"></td>
                     <td th:text="${reservationInfo.name}"></td>
                     <td th:text="${reservationInfo.list}"></td>
@@ -43,7 +43,65 @@
                 </tr>
                 </tbody>
             </table>
+
+        <!-- 페이징 -->
+        <ul class="pagination h-100 justify-content-center align-items-center">
+            <li class="page-item" th:if="${result.prev}">
+                <a class="page-link"
+                   th:href="@{/userReservation(page=${result.start - 1},
+                   type=${userResPageRequestDTO.type},
+                   keyword=${userResPageRequestDTO.keyword})}" tabindex="-1">이전</a>
+            </li>
+
+            <li class="page-item" th:class="${result.currentPage == page} ? 'active' : _"
+                th:each="page : ${result.pageList}">
+                <a class="page-link"
+                   th:href="@{/userReservation(page=${page},
+                   type=${userResPageRequestDTO.type},
+                   keyword=${userResPageRequestDTO.keyword})}">
+                    [[${page}]]
+                </a>
+            </li>
+
+            <li class="page-item" th:if="${result.next}">
+                <a class="page-link"
+                   th:href="@{/userReservation(page = ${result.end + 1},
+                   type=${userResPageRequestDTO.type},
+                   keyword=${userResPageRequestDTO.keyword})}">다음</a>
+            </li>
+        </ul>
+        <!-- 페이징 -->
+
+        <!-- 검색 -->
+        <form th:object="${userResPageRequestDTO}">
+            <input type="hidden" name="page" value="1">
+            <select class="form-select" aria-label="Default select example" th:field="*{type}">
+                <option th:each="type : ${searchTypes}"
+                        th:value="${type.key}"
+                        th:text="${type.value}">검색 타입</option>
+            </select>
+            <input type="text" class="form-control" th:field="*{keyword}" placeholder="검색어를 입력하세요.">
+            <button type="button" class="btn btn-secondary btn-sm searchBtn">검색하기</button>
+        </form>
+        <!-- 검색 -->
     </div>
+
+    <script th:inline="javascript">
+        var actionForm = $("form");
+
+        $(".searchBtn").click(function(){
+
+            var keyword = $("input[name='keyword']");
+
+            if (keyword.val() === null || keyword.val() === "") {
+                alert("검색어를 입력해주세요.")
+                return;
+            }
+
+            actionForm.submit();
+        });
+
+    </script>
 </div>
 </body>
 </html>
