--- a/src/main/resources/templates/maps/main.html
+++ b/src/main/resources/templates/maps/main.html
@@ -17,9 +17,9 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<form action="${kakao}" method="GET">
+		<form action="${kakao}" th:action="@{/api/places}" method="GET">
 			<input type="text" id="search" name="search" placeholder="ex) 강남 소아과">
-			<button type="submit" id="button" th:href="@{/maps/searchList}" onclick="location.href='/api/places'">검색</button>
+			<button type="submit">검색</button>
 		</form>
 		
 		<script type="text/javascript">
