--- a/src/main/resources/templates/HptReception/HptReceptionList.html
+++ b/src/main/resources/templates/HptReception/HptReceptionList.html
@@ -42,15 +42,15 @@
                 <td>
                     <a th:if="${hptReception.currentStatus == '접수대기'}"
                        th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToAccept(resNo=${hptReception.resNo})}"
-                       onclick="acceptReception()">접수</a>
+                       onclick="return acceptReception()">접수</a>
 
                     <a th:if="${hptReception.currentStatus == '접수대기'}"
                        th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToReject(resNo=${hptReception.resNo})}"
-                       onclick="rejectReception()">거절</a>
+                       onclick="return rejectReception()">거절</a>
 
                     <a th:if="${hptReception.currentStatus == '진료 전'}"
                        th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToComplete(resNo=${hptReception.resNo})}"
-                       onclick="completeReception()">진료완료</a>
+                       onclick="return completeTreatment()">진료완료</a>
                 </td>
             </tr>
             </tbody>
